added two slides

--- a/app/index.html
+++ b/app/index.html
@@ -82,6 +82,7 @@
         </div>
 
         <div class="header__slider__container header-home">
+
             <div class="siema">
 
                 <div class="header__slider__inner sixth">
@@ -105,7 +106,6 @@
                     </div>
 
                 </div>
-
 
                 <div class="header__slider__inner fifth">
 
@@ -150,10 +150,49 @@
 
                 </div>
 
+                <div class="header__slider__inner seventh">
 
+                    <div class="header-content row ">
+                        <div>
+                            <h2 class="header-content__title ">
+                                SLS Fixed Deposit
+                            </h2>
+                            <p class="header-content__txt ">
+                                This is an investment account, where you deposit money for a fixed period of time and earn interest as high as 15 percent per annum. You can fix money for a minimum period of 30days to a maximum of 360 days
+                            </p>
+                            <a href="https://accelerex-app.netlify.com" class="btn ">
+                                    GET A LOAN NOW 
+                                </a>
+                        </div>
 
+                        <div>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="header__slider__inner eighth">
+
+                    <div class="header-content row ">
+                        <div>
+                            <h2 class="header-content__title ">
+                                SLS Save
+                            </h2>
+                            <p class="header-content__txt ">
+
+                                This product is targeted towards achieving financial goals. You can open this account with amount as low as N5,000. Interest rate is 2% P.A above regular saving account. To open this account and save with us you would require one recent passport and a
+                                means of identification. </p>
+                            <a href="https://accelerex-app.netlify.com" class="btn ">
+                                    GET A LOAN NOW 
+                                </a>
+                        </div>
+
+                        <div>
+                        </div>
+                    </div>
+
+                </div>
             </div>
-
 
         </div>
 
@@ -165,6 +204,8 @@
 
 
         <div class="header__dot-container ">
+            <div class="dot "></div>
+            <div class="dot "></div>
             <div class="dot "></div>
             <div class="dot "></div>
             <div class="dot "></div>
