--- a/app/faq.html
+++ b/app/faq.html
@@ -104,7 +104,7 @@
     </header>
 
     <section class="faq-section">
-        <div class="row">
+        <div class="container">
             <div class="about-content__item" style="width: 100%;">
                 <h2 class="title">
                     frequently asked questions
