added terms and policy page

--- a/app/stories.html
+++ b/app/stories.html
@@ -353,7 +353,11 @@
                     <span>
                         &copy; 2020 Accelerex. All rights reserved.
                     </span>
-
+                    <span>
+                        <a href="terms.html" class="footer__link">
+                            Terms &amp; Policies
+                        </a>
+                    </span>
                 </div>
 
             </div>
