--- a/app/about.html
+++ b/app/about.html
@@ -649,6 +649,11 @@
                     <span>
                         &copy; 2020 Accelerex. All rights reserved.
                     </span>
+                    <span>
+                        <a href="terms.html" class="footer__link">
+                            Terms &amp; Policies
+                        </a>
+                    </span>
 
                 </div>
 
