--- a/app/faq.html
+++ b/app/faq.html
@@ -104,7 +104,7 @@
     </header>
 
     <section class="faq-section">
-        <div class="container">
+        <div class="row">
             <div class="about-content__item" style="width: 100%;">
                 <h2 class="title">
                     frequently asked questions
@@ -320,7 +320,11 @@
                     <span>
                         &copy; 2020 Accelerex. All rights reserved.
                     </span>
-
+                    <span>
+                        <a href="terms.html" class="footer__link">
+                            Terms &amp; Policies
+                        </a>
+                    </span>
                 </div>
 
             </div>
