--- a/app/index.html
+++ b/app/index.html
@@ -765,7 +765,11 @@
                     <span>
                         &copy; 2020 Accelerex. All rights reserved.
                     </span>
-
+                    <span>
+                        <a href="terms.html" class="footer__link">
+                            Terms &amp; Policies
+                        </a>
+                    </span>
                 </div>
 
             </div>
